--- a/Project/css/footer.css
+++ b/Project/css/footer.css
@@ -6,8 +6,10 @@
     text-align: center;
 }
 #footer{
+    border: 1px white solid;
     width:1200px;
     height: 150px;
+    margin: 0px auto;
 }
 #address ul{
     text-align: center;
