Be completed landscape ver2

--- a/Project/css/body.css
+++ b/Project/css/body.css
@@ -1,4 +1,6 @@
 #body_wrap{
-    text-align: center;
-    height: 593px;
+    width: 1000px;
+    height: 583px;
+    margin: 0px auto;
+    background-color: white;
 }
