--- a/Project/css/Header.css
+++ b/Project/css/Header.css
@@ -1,24 +1,34 @@
 body{
     margin: 0px;
+    background-color: green;
 }
 #header{
     margin:0px;
     width: 100%;
     height: 230px;
+    margin: 0px auto;
     position: fixed;
     z-index: 1;
 }
+#header_wrap{
+    width: 1000px;
+    margin: 0px auto;
+    background-color: #99c2e6;
+}
 #top{
-    background-color:#221100;
-    width: 100%;
+    /*background-color:#221100;*/
+    background-color: #99c2e6;
+    width: 90%;
     height: 30px;
+    margin: 0px auto;
 }
 #logo{
-    width: 100%;
+    width: 90%;
     height: 150px;
     text-align: center;
     /*background-image: url(http://einet.galtime.kr/super/client/page/none);*/
     background-color: #99c2e6;
+    margin: 0px auto;
 }
 #logo table{
     width: 100%;
@@ -34,14 +44,16 @@ body{
     height: 230px;
 }
 #menu ul{
-    width: 1200px;
+    width: 970px;
     margin: 10px auto;
-    padding: 0px;
+    padding-left: 0px;
+    padding-right: 30px;
+    text-align: center;
 }
 #menu li{
     list-style: none;
     display: inline-block;
-    margin: 2px 0px 0px 55px;
+    margin: 2px 0px 0px 30px;
     font-size: 16px;
 }
 #menu a{
