--- a/Project/css/base_body.css
+++ b/Project/css/base_body.css
@@ -1,17 +1,20 @@
 #body_wrap{
-   width: 100%;
-   text-align: center;
+   width: 1000px;
+   margin: 0px auto;
+   background-color: white;
 }
 #body_header{
-   width: 100%;
-   margin: 10px auto;
+   width: 900px;
+   margin: 0px auto;
+   text-align: center;
 }
 #body_blank{
-   width: 1200px;
+   width: 1000px;
    height: 30px;
    margin: 0px auto;
 }
 #body_img{
-   width: 1200px;
+   width: 900px;
    margin: 0px auto;
+   text-align: center;
 }
