--- a/Project/css/base_body.css
+++ b/Project/css/base_body.css
@@ -13,8 +13,9 @@
    height: 30px;
    margin: 0px auto;
 }
-#body_img{
+#body_con{
    width: 900px;
+   height: 100%;
    margin: 0px auto;
    text-align: center;
 }
