--- a/Project/css/Header.css
+++ b/Project/css/Header.css
@@ -1,6 +1,8 @@
 body{
     margin: 0px;
-    background-color: green;
+    /*background-color: green;*/
+    background-image: url(../img/back.jpg);
+    background-size: 100% 100%;
 }
 #header{
     margin:0px;
@@ -16,9 +18,9 @@ body{
     background-color: #99c2e6;
 }
 #top{
-    /*background-color:#221100;*/
-    background-color: #99c2e6;
-    width: 90%;
+    background-color:#221100;
+    /*background-color: #99c2e6;*/
+    width: 100%;
     height: 30px;
     margin: 0px auto;
 }
