--- a/Project/css/Header.css
+++ b/Project/css/Header.css
@@ -1,8 +1,7 @@
 body{
-    margin: 0px;
-    /*background-color: green;*/
+    margin: 0px;    
     background-image: url(../img/back.jpg);
-    background-size: 100% 100%;
+    background-size: 1600px 1200px;
 }
 #header{
     margin:0px;
