--- a/Project/css/header.css
+++ b/Project/css/header.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;    
     background-image: url(../img/back.jpg);
-    background-size: 1600px 1200px;
+    background-size: 2880px 1800px;
 }
 #header{
     margin:0px;
@@ -68,3 +68,10 @@ body{
     font-weight: bold;
     transition: 0.3s;
 }
+#SIDEMENU{
+    margin: 0px;
+    padding: 0px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+ }
