--- a/Project/css/header.css
+++ b/Project/css/header.css
@@ -23,6 +23,12 @@ body{
     height: 30px;
     margin: 0px auto;
 }
+#top audio{
+    background-color: black;
+    width: 300px;
+    height: 30px;
+    float: right;
+}
 #logo{
     width: 90%;
     height: 150px;
